Whitespace layout fix between the arp and the group info

--- a/coin-selfservice-war/src/main/webapp/sass/base.sass
+++ b/coin-selfservice-war/src/main/webapp/sass/base.sass
@@ -59,7 +59,8 @@ li
 p,
 ul,
 ol,
-.with-read-more
+.with-read-more,
+.arp
   margin-bottom: 25px
 
   &:last-child
